Fix containers name

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,13 +7,13 @@
   },
   "ReverseProxy": {
     "Routes": {
-      "flask-api": {
-        "ClusterId": "flask-cluster",
+      "ai-rest-api": {
+        "ClusterId": "ai-cluster",
         "Match": {
-          "Path": "/flask/{**catch-all}"
+          "Path": "/ai/{**catch-all}"
         },
         "Transforms": [
-          { "PathRemovePrefix": "/flask" }
+          { "PathRemovePrefix": "/ai" }
         ]
       },
       "auth-api": {
@@ -25,30 +25,30 @@
           { "PathRemovePrefix": "/auth" }
         ]
       },
-      "rest-api": {
-        "ClusterId": "rest-cluster",
+      "data-rest-api": {
+        "ClusterId": "data-cluster",
         "Match": {
-          "Path": "/rest/{**catch-all}"
+          "Path": "/data/{**catch-all}"
         },
         "Transforms": [
-          { "PathRemovePrefix": "/rest" }
+          { "PathRemovePrefix": "/data" }
         ]
       }
     },
     "Clusters": {
-      "flask-cluster": {
+      "ai-cluster": {
         "Destinations": {
-          "flask-service": { "Address": "http://flask-app:5000" }
+          "ai-rest-api-service": { "Address": "http://ai-rest-api:5000" }
         }
       },
       "auth-cluster": {
         "Destinations": {
-          "auth-service": { "Address": "http://auth-app:8025" }
+          "auth-api-service": { "Address": "http://auth-api:8025" }
         }
       },
-      "rest-cluster": {
+      "data-cluster": {
         "Destinations": {
-          "rest-api-service": { "Address": "http://rest-api-app:8080" }
+          "data-rest-api-service": { "Address": "http://data-rest-api:8080" }
         }
       }
     }
